--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,6 @@
 	</head>
 	<body>
 		<h1 style="color: darkslategray;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Kennet School Blog</h1>
+		<a href="/about/">About</a>
 	</body>
 </html>
