Added two new pages - about and blog

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,5 +13,6 @@
 	<body>
 		<h1 style="color: darkslategray;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Kennet School Blog</h1>
 		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
 	</body>
 </html>
