--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,12 +8,17 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Kennet School Blog</title>
+		<title>Kennet School Blogs</title>
 	</head>
 	<body>
-		<h1 style="color: darkslategray;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Example blog post</h1>
-        <p style="color:black;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Blog blog blah blah blah whatever.</p>
-        <a href="/">Home</a>
+		<h1 style="color: darkslategray;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Blog posts</h1>
+        <p style="color:black;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Find published articles below:</p>
+		<ul>
+			<li><a href="/posts/post-1/">Sam's post</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+			<li><a href="/posts/post-3/">Post 3</a></li>
+		</ul>  
+		<a href="/">Home</a>
     </body>
 </html>
 
