--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<h1 style="color: darkslategray;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Kennet School Blog</h1>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<a href="/about/">About</a><br>
+		<a href="/blog/">Blogs</a>
 	</body>
 </html>
