--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const websiteName = "Kennet School Blog";
 const whoaClass = {
 	randomVariable: "Hello",
@@ -17,29 +19,18 @@ const stringDisplay = "no";
 		<meta name="generator" content={Astro.generator} />
 		<title>{websiteName}</title>
 
-		<style>
-			.titles {
-				color: darkslategray;
-				font-family: Arial;
-			}
-			.words {
-				color: black;
-				font-family: Arial;
-			}
-		</style>
 	</head>
 
 	<body>
-		<h1 class="titles">About the Kennet School Blog</h1>
-		<p class="words">
+		<h1 >About the Kennet School Blog</h1>
+		<p >
 			We are a collection of 6th formers from Kennet School who will be
 			documenting our investigations into supercurricular content of our
 			chosen subjects.
 		</p>
-		<a class="words" href="/">Home</a>
+		<a  href="/">Home</a>
 		<br />
 
-		{display && <p class="words">"Whoa this is displayed"</p>}
-		{stringDisplay === "yes" ? <p>"Woah this is displayed"</p> : <p />}
+		{display && <p >"Whoa this is displayed"</p>}
 	</body>
 </html>
