--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import '../styles/global.css';
 ---
 
 <html lang="en">
@@ -10,20 +10,10 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Kennet School Blog</title>
 
-		<style>
-			.titles {
-				color: darkslategray;
-				font-family: Arial;
-			}
-			.words {
-				color: black;
-				font-family: Arial;
-			}
-		</style>
 	</head>
 	<body>
-		<h1 class="titles">Kennet School Blog</h1>
-		<a class="words" href="/about/">About</a><br />
-		<a class="words" href="/blog/">Blogs</a>
+		<h1 >Kennet School Blog</h1>
+		<a  href="/about/">About</a><br />
+		<a  href="/blog/">Blogs</a>
 	</body>
 </html>
