--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-import '../styles/global.css';
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -9,11 +11,15 @@ import '../styles/global.css';
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Kennet School Blog</title>
-
 	</head>
 	<body>
-		<h1 >Kennet School Blog</h1>
-		<a  href="/about/">About</a><br />
-		<a  href="/blog/">Blogs</a>
+		<h1>Kennet School Blog</h1>
+		<Header />
+		<Footer />
+		<script>
+			document.querySelector('.hamburger')?.addEventListener('click', () => {
+			  document.querySelector('.nav-links')?.classList.toggle('expanded');
+			});
+		  </script>
 	</body>
 </html>
