hamburger but good

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,5 +30,8 @@ const stringDisplay = "no";
 			documenting our investigations into supercurricular content of our
 			chosen subjects.
 		</p>
+		<script>
+			import "../scripts/menu.js";
+		  </script>
 	</body>
 </html>
