--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,5 +20,8 @@ import Header from '../components/Header.astro';
 		<ul>
 			<PostLinks />
 		</ul>
+		<script>
+			import "../scripts/menu.js";
+		  </script>
 	</body>
 </html>
