--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,9 +17,7 @@ import Footer from "../components/Footer.astro";
 		<Header />
 		<Footer />
 		<script>
-			document.querySelector('.hamburger')?.addEventListener('click', () => {
-			  document.querySelector('.nav-links')?.classList.toggle('expanded');
-			});
+			import "../scripts/menu.js";
 		  </script>
 	</body>
 </html>
