--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ import Hamburger from './Hamburger.astro';
 import Navigation from './Navigation.astro';
 ---
 <header>
+  <h1>Kennet School Blog</h1>
   <nav>
     <Hamburger />
     <Navigation />
