--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,7 @@
 ---
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = "Home";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Kennet School Blog</title>
-	</head>
-	<body>
-		<h1>Kennet School Blog</h1>
-		<Header />
-		<Footer />
-		<script>
-			import "../scripts/menu.js";
-		  </script>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <p>Welcome to the Kennet School Blog!</p>
+</BaseLayout>
