--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,6 @@ html {
   
   body {
     margin: 0 auto;
-    width: 100%;
     max-width: 80ch;
     padding: 1rem;
     line-height: 1.5;
@@ -15,9 +14,14 @@ html {
     box-sizing:border-box;
   }
   
-  h1,h2,h3 {
+  h1 {
     margin: 1rem 0;
     font-size: 2.5rem;
+    color: darkslategray;
+  }
+  h2 {
+    margin: 1rem 0;
+    font-size: 2rem;
     color: darkslategray;
   }
   p,a {
