--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,3 @@
----
-const platform = "github";
-const username = "withastro";
----
-
 <footer>
-  <p>Default footer text</p>
+  <label>Default footer text</label>
 </footer>
