--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,8 +46,8 @@ a {
 /* ====== Header & Footer ====== */
 header, footer {
   color: #ffffff;
-  background-color: #556c80;
-  width: 100vw;
+  background-color: #293846;
+  width: 100%;
   min-height: 4rem;
   display: flex;
   align-items: center;
@@ -77,6 +77,7 @@ header, footer {
   position: absolute;
   top: 5rem;
   left: 48px;
+
 }
 
 .nav-links a {
@@ -87,13 +88,15 @@ header, footer {
   font-weight: bold;
   text-transform: uppercase;
   color: black;
-  background-color: #9eb6ca;
+  background-color: #97cefc;
   border-radius: 0px;
 }
 
 .nav-links a:hover,
 .nav-links a:focus {
   background-color: #80a3c0;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
 }
 
 /* Show navigation when expanded */
