Better dropdowns and cleanup

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,15 @@
 ---
-import Hamburger from './Hamburger.astro';
-import Navigation from './Navigation.astro';
+import Hamburger from "./Hamburger.astro";
+import Navigation from "./Navigation.astro";
 ---
+
 <header>
-  <h1>Kennet School Blog</h1>
+  
+  
+    <a href="/">
+      <h1>Kennet School Blog</h1>
+    </a>
+    
   <nav>
     <Hamburger />
     <Navigation />
