--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,10 @@
 <div class="nav-links">
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <div class="dropdown">
+        <button class="link">Blog</button>
+        <div class="dropdown-menu">
+            Dropdown content
+        </div>
+    </div>
 </div>
