--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,14 +3,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  line-height: 1.5;
+  font-family: Arial, sans-serif;
 }
 
 html, body {
   width: 100%;
   height: 100%;
-  font-family: Arial, sans-serif;
   background-color: #ffffff;
-  line-height: 1.5;
 }
 
 .container {
@@ -78,15 +78,16 @@ footer {
   width: 50%;
   margin: 0;
   position: absolute;
-  top:  6rem;
+  top:  calc(100%+.25rem);
   right: 1em;
   opacity: 0;
   pointer-events: none;
-  transform: translateY(-10px);
+  transform: translateY(-15px);
   transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0,.3);
 }
 
-.nav-links a {
+.nav-links a,.nav-links button {
   display: block;
   text-align: center;
   padding: 0.5em 0;
@@ -97,39 +98,69 @@ footer {
   background-color: #80a3c0;
 }
 
-.nav-links a:hover,
-.nav-links a:focus {
-  background-color: #80a3c0;
+.nav-links a:hover,.nav-links a:focus, .nav-links button:hover,.nav-links button:focus {
+  background-color: #628099;
   text-decoration: underline;
   text-decoration-thickness: 0.15em;
 }
 
-/* Show navigation when expanded */
+/*Show navigation when expanded*/
 .expanded {
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0,.3);
 }
 
+/*Dropdown menu styling*/
+.dropdown {
+  position: relative;
+}
 
-/*Regular screens*/
+.dropdown-menu {
+  position:absolute;
+  right: 0;
+  top: calc(100%);
+  background-color: #5e7a91;
+  padding: .75rem;
+  border-radius: .25rem;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0,.3);
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-15);
+  transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
+}
+
+.dropdown > .link:focus + .dropdown-menu {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+/*Remove default button border*/
+button{
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+/*Big screen styles*/
 @media screen and (min-width: 636px) {
   .hamburger {
-    display: none; /* Hide hamburger on larger screens */
+    display: none; /*Hide hamburger on larger screens*/
   }
 
   .nav-links {
     margin-left: 5em;
-    display: block;
+    display: inline-flex;
     position: static;
     width: auto;
     background: none;
     opacity: 1;
     pointer-events: auto;
+    box-shadow: none;
   }
 
-  .nav-links a {
+  .nav-links a,.nav-links button {
     display: inline-block;
     padding: 0.25em 1em;
     border-radius: 1em;
