--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,17 @@
 <div class="nav-links">
     <a href="/">Home</a>
     <a href="/about/">About</a>
-    <div class="dropdown">
-        <button class="link">Blog</button>
-        <div class="dropdown-menu">
-            Dropdown content
+    <div class="dropdown" data-dropdown>
+        <button class="link" data-dropdown-button>Blogs&#x23F7</button>
+        <div class="dropdown-menu information-grid">
+            <div>
+                <div class="dropdown-heading">Arts</div>
+                <div class="dropdown-links">
+                    <a href="#">All</a>
+                    <a href="#">All</a>
+                    <a href="#">All</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
