--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -85,21 +85,24 @@ footer {
   transform: translateY(-15px);
   transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0,.3);
-}
-
-.nav-links a,.nav-links button {
-  display: block;
-  text-align: center;
-  padding: 0.5em 0;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: black;
+  border-radius: .25rem;
   background-color: #80a3c0;
 }
 
-.nav-links a:hover,.nav-links a:focus, .nav-links button:hover,.nav-links button:focus {
-  background-color: #628099;
+.nav-links a,.nav-links button {
+  display:block;
+  text-align: center;
+  width: 100%;
+  padding: 0.5em 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: black;
+  background-color: #80a3c0;
+  border-radius: .25rem;
+}
+
+.nav-links a:hover,.nav-links a:focus, .nav-links button:hover,.dropdown.active > .link {
+  background-color: #698ba7;
   text-decoration: underline;
   text-decoration-thickness: 0.15em;
 }
@@ -118,19 +121,21 @@ footer {
 
 .dropdown-menu {
   position:absolute;
-  right: 0;
+  left: 0;
   top: calc(100%);
-  background-color: #5e7a91;
+  color: black;
+  background-color: #80a3c0;
   padding: .75rem;
   border-radius: .25rem;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0,.3);
   opacity: 0;
   pointer-events: none;
-  transform: translateY(-15);
+  transform: translateY(-15px);
   transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
+  z-index: 2;
 }
 
-.dropdown > .link:focus + .dropdown-menu {
+.dropdown.active > .link + .dropdown-menu {
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
