tags and subjects

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,11 +5,19 @@
         <button class="link" data-dropdown-button>Blogs&#x23F7</button>
         <div class="dropdown-menu information-grid">
             <div>
-                <div class="dropdown-heading">Arts</div>
+                <div class="dropdown-heading"><a href="/blogs/art/">Art:</a></div>
                 <div class="dropdown-links">
-                    <a href="#">All</a>
-                    <a href="#">All</a>
-                    <a href="#">All</a>
+                    <a href="/blogs/english/">English</a>
+                    <a href="/blogs/law/">Law</a>
+                    <a href="/blogs/politics/">Politics</a>
+                </div>
+            </div>
+            <div>
+                <div class="dropdown-heading"><a href="/blogs/science/">Science:</a></div>
+                <div class="dropdown-links">
+                    <a href="/blogs/engineering/">Engineering</a>
+                    <a href="/blogs/mathematics/">Mathematics</a>
+                    <a href="/blogs/physics/">Physics</a>
                 </div>
             </div>
         </div>
