--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -1,14 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = "Blog Posts";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <p>Find published articles below:</p>
-  <!--
-		<ul>
-			<a href="/posts/post-1/">Sam's post</a><br />
-			<a href="/posts/post-2/">Post 2</a><br />
-			<a href="/posts/post-3/">Post 3</a><br />
-		</ul>
--->
+  {allPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
 </BaseLayout>
