--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,19 +7,19 @@
         <button class="link" data-dropdown-button>Blogs&#x23F7</button>
         <div class="dropdown-menu information-grid">
             <div>
-                <div class="dropdown-heading"><a href="/blogs/art/">Art:</a></div>
+                <div class="dropdown-heading"><a href="/art/">Art:</a></div>
                 <div class="dropdown-links">
-                    <a href="/blogs/english/">English</a>
-                    <a href="/blogs/law/">Law</a>
-                    <a href="/blogs/politics/">Politics</a>
+                    <a href="/english/">English</a>
+                    <a href="/law/">Law</a>
+                    <a href="/politics/">Politics</a>
                 </div>
             </div>
             <div>
-                <div class="dropdown-heading"><a href="/blogs/science/">Science:</a></div>
+                <div class="dropdown-heading"><a href="/science/">Science:</a></div>
                 <div class="dropdown-links">
-                    <a href="/blogs/engineering/">Engineering</a>
-                    <a href="/blogs/mathematics/">Mathematics</a>
-                    <a href="/blogs/physics/">Physics</a>
+                    <a href="/engineering/">Engineering</a>
+                    <a href="/mathematics/">Mathematics</a>
+                    <a href="/physics/">Physics</a>
                 </div>
             </div>
         </div>
