--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   line-height: 1.5;
-  font-family: Arial, sans-serif;
+  font-family: 'Inter Variable', sans-serif;
 }
 
 html, body {
@@ -16,7 +16,7 @@ html, body {
 .container {
   max-width: 80ch;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 /*Typography*/
