--- a/src/pages/[tag].astro
+++ b/src/pages/[tag].astro
@@ -1,36 +1,53 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/postList.css";
 
 export async function getStaticPaths() {
-  const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
-  const uniqueTags = [...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
+  const allPosts = Object.values(
+    import.meta.glob("./posts/*.md", { eager: true }),
+  );
+  const uniqueTags = [
+    ...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat()),
+  ];
   return uniqueTags.map((tag) => {
-  const filteredPosts = allPosts.filter((post: any) => post.frontmatter.tags.includes(tag));
-  return {
-    params: { tag },
-    props: { posts: filteredPosts },
-  };
-});
+    const filteredPosts = allPosts.filter((post: any) =>
+      post.frontmatter.tags.includes(tag),
+    );
+    return {
+      params: { tag },
+      props: { posts: filteredPosts },
+    };
+  });
 }
 
 var { tag } = Astro.params;
-if (tag === "all-posts"){
+if (tag === "all-posts") {
   tag = " ";
 }
 const { posts } = Astro.props;
 ---
-<BaseLayout pageTitle={String(tag).charAt(0).toUpperCase() + String(tag).slice(1)}>
+
+<BaseLayout
+  pageTitle={String(tag).charAt(0).toUpperCase() + String(tag).slice(1)}
+>
   <p>Find published {tag} articles below:</p>
   <ul>
-    {posts.map((post: any) => <div class="postList">
-      <a href={post.url}>
-        <img
-          src={post.frontmatter.image.url}
-          alt={post.frontmatter.image.alt}
-        />
-        {post.frontmatter.title}
-      </a>
-    </div>)}
+    {
+      posts.map((post: any) => (
+        <a href={post.url}>
+          <div class="postList">
+            <img
+              src={post.frontmatter.image.url}
+              alt={post.frontmatter.image.alt}
+            />
+            <div class="listTexts">
+              <h3>{post.frontmatter.title}</h3>
+              <p>Written by {post.frontmatter.author}</p>
+              <p>Published on: {post.frontmatter.pubDate.toString().slice(0, 10)}</p>
+            </div>
+          </div>
+        </a>
+      ))
+    }
   </ul>
 </BaseLayout>
