Kennet School Academic Journal

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import Navigation from "./Navigation.astro";
 
 <header>
     <a href="/">
-      <h1>Kennet School Blog</h1>
+      <h1>Kennet School Academic Journal</h1>
     </a>
   <nav>
     <Hamburger />
