--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,7 +11,7 @@
                 <div class="dropdown-links">
                     <a href="/english/">English</a>
                     <a href="/law/">Law</a>
-                    <a href="/politics/">Politics</a>
+                    <a href="/PPE/">PPE</a>
                 </div>
             </div>
             <div>
