--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Home";
 ---
+
 <BaseLayout pageTitle={pageTitle}>
   <p>Welcome to the Kennet School Blog!</p>
 </BaseLayout>
