Kennet School Academic Journal ptII

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ const pageTitle = "Home";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <p>Welcome to the Kennet School Blog!</p>
+  <p>Welcome to the Kennet School Academic Journal!</p>
 </BaseLayout>
